--- a/css/check.css
+++ b/css/check.css
@@ -31,6 +31,7 @@
     height: 25px;
     width: 25px;
     background-color: #eee;
+    border-radius: 50%;
   }
   
   /* On mouse-over, add a grey background color */
