--- a/css/check.css
+++ b/css/check.css
@@ -1,11 +1,12 @@
 /* Customize the label (the container) */
 .container {
-    display: block;
+    display: flex;
+    align-items: center;
     position: relative;
     padding-left: 35px;
-    margin-bottom: 12px;
     cursor: pointer;
-    font-size: 22px;
+    height: 25px;
+    font-size: 16px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -19,7 +20,7 @@
     cursor: pointer;
     height: 0;
     width: 0;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
   }
   
