--- a/css/drag-and-drop.css
+++ b/css/drag-and-drop.css
@@ -1,11 +1,15 @@
 .content {
   height: 100vh;
-  width: 90%;
+  max-width: 90%;
   margin: auto;
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
   gap: 16px;
+  -webkit-user-select: none;      
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .status-column {
@@ -19,6 +23,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  padding-top: 30px;
 }
 
 .dropzone.dragover {
@@ -33,4 +38,9 @@
 
 .dragging {
   opacity: .9;
+}
+
+.column-title {
+  font-weight: 500;
+  font-size: 20px;
 }
