--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,13 @@
     --primary-action-color: #47E73B;
     --primary-action-color-hover: #3ed433;
     --primary-action-color-active: #18cc0b;
+    --planned-color: #FF2274;
+    --doing-color: #FFA944;
+    --review-color: #1AAFFF;
+    --done-color: #42A637;
     --input-border-color: #444444;
     --input-color: #535353;
+    --background-color: #EEF2F5;
     --input-background-color: #f5f5f5;
     --title-font: 28px;
     --body-font: 18px;
@@ -23,10 +28,11 @@
 }
 header{
     font-weight: 600;
+    margin-bottom: 64px;
 }
 
 body{
-    background: var(--cor-primary);
+    background: var(--background-color);
     font-family: 'Quicksand', sans-serif;
 }
 
