--- a/css/drag-and-drop.css
+++ b/css/drag-and-drop.css
@@ -1,22 +1,43 @@
+body {
+  overflow: auto;
+}
+
 .content {
-  height: 100vh;
+  min-height: 100vh;
   max-width: 90%;
   margin: auto;
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
+  display: flex;
+  justify-content: space-between;
   gap: 16px;
-  -webkit-user-select: none;      
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
+  overflow-x: scroll;
+}
+
+
+@media screen and (max-width: 1300px) {
+  .status-column {
+    min-width: 30%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .status-column {
+    min-width: 45%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .status-column {
+    min-width: 90%;
+  }
 }
 
 .status-column {
+  width: 25%;
   display: flex;
   flex-direction: column;
-  height: 100vh;
   padding: 8px;
+  gap: 8px;
 }
 
 .dropzone {
@@ -27,13 +48,13 @@
 }
 
 .dropzone.dragover {
-  background: #bbb;
+  background: rgb(227, 235, 247);
 }
 
 .drag-item {
   background: #faffff;
   padding: 16px;
-  cursor:grab;
+  cursor: grab;
 }
 
 .dragging {
